--- a/index.html
+++ b/index.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Esat Aksoy | Information Security</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Esat Aksoy – Information Security & IT Professional">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Esat Aksoy | CV</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Esat Aksoy</h1>
-  <p>Information Security & IT</p>
+<div class="container">
+  <header>
+    <h1>Esat Aksoy</h1>
+    <p>Information Security & Cybersecurity Professional</p>
+    <button id="toggle-theme">Toggle Dark Mode</button>
+  </header>
+
+  <section class="personal">
+    <h2>Personal Information</h2>
+    <ul>
+      <li>Year of Birth: 1991</li>
+      <li>Citizenship: Turkey & Netherlands</li>
+      <li>Location: Amsterdam, Netherlands</li>
+      <li>Email: <a href="mailto:mesataksoy@gmail.com">mesataksoy@gmail.com</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/meaksoy/" target="_blank">linkedin.com/in/meaksoy</a></li>
+      <li>GitHub: <a href="https://github.com/MEAKSOY" target="_blank">MEAKSOY</a></li>
+    </ul>
+  </section>
+
+  <section class="education">
+    <h2>Education</h2>
+    <ul>
+      <li>Software Engineering – Make It Work</li>
+      <li>International Relations – Gazi University</li>
+    </ul>
+  </section>
+
+  <section class="languages">
+    <h2>Languages</h2>
+    <ul>
+      <li>Turkish (Native)</li>
+      <li>English (Fluent)</li>
+      <li>Dutch (Intermediate)</li>
+    </ul>
+  </section>
+
+  <section class="skills">
+    <h2>Skills & GRC</h2>
+    <ul>
+      <li>Information Security</li>
+      <li>Governance, Risk & Compliance</li>
+      <li>Cybersecurity Awareness</li>
+    </ul>
+  </section>
+
+  <section class="standards">
+    <h2>Standards & Frameworks</h2>
+    <ul>
+      <li>ISO 27001</li>
+      <li>ISO 9001</li>
+      <li>NIS2</li>
+      <li>NIST</li>
+    </ul>
+  </section>
+
+  <section class="interests">
+    <h2>Interests</h2>
+    <ul>
+      <li>Hiking & Nature</li>
+      <li>Food & Gastronomy</li>
+      <li>Outdoor Sports</li>
+      <li>Football</li>
+    </ul>
+  </section>
+</div>
+
+<script>
+const toggleBtn = document.getElementById('toggle-theme');
+toggleBtn.addEventListener('click', () => {
+  document.body.classList.toggle('dark-mode');
+});
+</script>
 </body>
 </html>
