--- a/index.html
+++ b/index.html
@@ -74,9 +74,18 @@
 </div>
 
 <script>
-const toggleBtn = document.getElementById('toggle-theme');
-toggleBtn.addEventListener('click', () => {
-  document.body.classList.toggle('dark-mode');
+// Dark Mode toggle - working version
+document.addEventListener("DOMContentLoaded", () => {
+  const toggleBtn = document.getElementById('toggle-theme');
+  toggleBtn.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+    // button text switch
+    if(document.body.classList.contains('dark-mode')){
+      toggleBtn.textContent = "Light Mode";
+    } else {
+      toggleBtn.textContent = "Dark Mode";
+    }
+  });
 });
 </script>
 </body>
