--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </section>
 
   <section class="skills">
-    <h2>Skills & GRC</h2>
+    <h2>Skills</h2>
     <ul>
       <li>Information Security</li>
       <li>Governance, Risk & Compliance</li>
